// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`clear() supports basic case: value: "Hello! 1`] = `
[
  {
    "name": "focus",
    "payload": {
      "currentTarget": {},
      "nativeEvent": {
        "target": 0,
      },
      "target": {},
    },
  },
  {
    "name": "selectionChange",
    "payload": {
      "currentTarget": {},
      "nativeEvent": {
        "selection": {
          "end": 6,
          "start": 0,
        },
      },
      "target": {},
    },
  },
  {
    "name": "keyPress",
    "payload": {
      "currentTarget": {},
      "nativeEvent": {
        "key": "Backspace",
      },
      "target": {},
    },
  },
  {
    "name": "change",
    "payload": {
      "currentTarget": {},
      "nativeEvent": {
        "eventCount": 0,
        "target": 0,
        "text": "",
      },
      "target": {},
    },
  },
  {
    "name": "changeText",
    "payload": "",
  },
  {
    "name": "selectionChange",
    "payload": {
      "currentTarget": {},
      "nativeEvent": {
        "selection": {
          "end": 0,
          "start": 0,
        },
      },
      "target": {},
    },
  },
  {
    "name": "endEditing",
    "payload": {
      "currentTarget": {},
      "nativeEvent": {
        "target": 0,
        "text": "",
      },
      "target": {},
    },
  },
  {
    "name": "blur",
    "payload": {
      "currentTarget": {},
      "nativeEvent": {
        "target": 0,
      },
      "target": {},
    },
  },
]
`;

exports[`clear() supports defaultValue prop: defaultValue: "Hello Default!" 1`] = `
[
  {
    "name": "focus",
    "payload": {
      "currentTarget": {},
      "nativeEvent": {
        "target": 0,
      },
      "target": {},
    },
  },
  {
    "name": "selectionChange",
    "payload": {
      "currentTarget": {},
      "nativeEvent": {
        "selection": {
          "end": 14,
          "start": 0,
        },
      },
      "target": {},
    },
  },
  {
    "name": "keyPress",
    "payload": {
      "currentTarget": {},
      "nativeEvent": {
        "key": "Backspace",
      },
      "target": {},
    },
  },
  {
    "name": "change",
    "payload": {
      "currentTarget": {},
      "nativeEvent": {
        "eventCount": 0,
        "target": 0,
        "text": "",
      },
      "target": {},
    },
  },
  {
    "name": "changeText",
    "payload": "",
  },
  {
    "name": "selectionChange",
    "payload": {
      "currentTarget": {},
      "nativeEvent": {
        "selection": {
          "end": 0,
          "start": 0,
        },
      },
      "target": {},
    },
  },
  {
    "name": "endEditing",
    "payload": {
      "currentTarget": {},
      "nativeEvent": {
        "target": 0,
        "text": "",
      },
      "target": {},
    },
  },
  {
    "name": "blur",
    "payload": {
      "currentTarget": {},
      "nativeEvent": {
        "target": 0,
      },
      "target": {},
    },
  },
]
`;

exports[`clear() supports multiline: value: "Hello World!
How are you?" multiline: true, 1`] = `
[
  {
    "name": "focus",
    "payload": {
      "currentTarget": {},
      "nativeEvent": {
        "target": 0,
      },
      "target": {},
    },
  },
  {
    "name": "selectionChange",
    "payload": {
      "currentTarget": {},
      "nativeEvent": {
        "selection": {
          "end": 25,
          "start": 0,
        },
      },
      "target": {},
    },
  },
  {
    "name": "keyPress",
    "payload": {
      "currentTarget": {},
      "nativeEvent": {
        "key": "Backspace",
      },
      "target": {},
    },
  },
  {
    "name": "textInput",
    "payload": {
      "currentTarget": {},
      "nativeEvent": {
        "previousText": "Hello World!
How are you?",
        "range": {
          "end": 0,
          "start": 0,
        },
        "target": 0,
        "text": "",
      },
      "target": {},
    },
  },
  {
    "name": "change",
    "payload": {
      "currentTarget": {},
      "nativeEvent": {
        "eventCount": 0,
        "target": 0,
        "text": "",
      },
      "target": {},
    },
  },
  {
    "name": "changeText",
    "payload": "",
  },
  {
    "name": "selectionChange",
    "payload": {
      "currentTarget": {},
      "nativeEvent": {
        "selection": {
          "end": 0,
          "start": 0,
        },
      },
      "target": {},
    },
  },
  {
    "name": "contentSizeChange",
    "payload": {
      "currentTarget": {},
      "nativeEvent": {
        "contentSize": {
          "height": 16,
          "width": 0,
        },
        "target": 0,
      },
      "target": {},
    },
  },
  {
    "name": "endEditing",
    "payload": {
      "currentTarget": {},
      "nativeEvent": {
        "target": 0,
        "text": "",
      },
      "target": {},
    },
  },
  {
    "name": "blur",
    "payload": {
      "currentTarget": {},
      "nativeEvent": {
        "target": 0,
      },
      "target": {},
    },
  },
]
`;

exports[`clear() works when not all events have handlers 1`] = `
[
  {
    "name": "changeText",
    "payload": "",
  },
  {
    "name": "endEditing",
    "payload": {
      "currentTarget": {},
      "nativeEvent": {
        "target": 0,
        "text": "",
      },
      "target": {},
    },
  },
]
`;
